--- a/applicationrights.html
+++ b/applicationrights.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>APP权限的坑</title>
+    <title>APP权限陷阱</title>
     <!-- 引入 echarts.js -->
     <script src="JS/echarts.min.js"></script>
 </head>
 <body>
-<div style="background-color: aqua;background-image:url(image/yinsi3.jpg);background-attachment:fixed;width:100%; height: 600px">
+<div style="background-color: aqua; background-color: black; background-attachment:fixed;width:100%; height: 600px">
     <div style="margin-left: 15% ;margin-right: 15%; padding-top: 50px">
-       <p style="font-size: 100px; line-height: 200px; font-family: 方正粗圆_GBK; color: #ffffff; text-align: center">APP权限的坑</br><span >这些坑你踩过吗？</span>
+        <p style="font-size: 90px; line-height: 180px; font-family: 方正粗圆_GBK; color: #ffffff; text-align: center">APP权限陷阱</br>这些坑你踩过多少？
        </p>
    </div>
 </div>
@@ -19,7 +19,9 @@
     <p style="align-content: center;color:#fd0606;font-size: 20px; line-height: 40px; font-family: 华文仿宋; margin-left: 25%;margin-right: 25%">
 
         <br>
-        <span style="margin-left: 5%">工业和信息化部关于电信服务质量的通告（2020年第4号）中指出：三季度，工业和信息化部开展纵深推进APP侵害用户权益问题整治工作，组织对国内主流手机应用商店的20万款应用软件进行技术检测，发现500余款APP存在违规收集使用个人信息及APP强制、频繁、过度索权等问题，并对未在限期内完成整改的159款APP进行公开通报、31款APP进行下架。</span>
+        <span style="font-size: 50px">“</span><br>
+        <span style="margin-left: 5%">工业和信息化部关于电信服务质量的通告（2020年第4号）中指出：三季度，工业和信息化部开展纵深推进APP侵害用户权益问题整治工作，组织对国内主流手机应用商店的20万款应用软件进行技术检测，发现500余款APP存在违规收集使用个人信息及APP强制、频繁、过度索权等问题，并对未在限期内完成整改的159款APP进行公开通报、31款APP进行下架。</span><br>
+        <span style="font-size: 50px; margin-left: 98%">”</span><br>
     <br>
 
     </p>
@@ -100,9 +102,9 @@
 
 <div style="background-color: #fff;width:100%;height:20px"></div>
 
-<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 350px">
+<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 300px">
     <div style="margin-left: 20% ;margin-right: 20%; padding-top: 35px">
-        <p style="font-size: 80px; line-height: 120px; text-align: center"><span style="font-family: 方正粗圆_GBK; color: white"> App获取了哪些权限？</span>
+        <p style="font-size: 60px; line-height: 120px; text-align: center"><span style="font-family: 方正粗圆_GBK; color: white"> App获取了哪些权限？</span>
         </p>
     </div>
 </div>
@@ -146,9 +148,9 @@
 
 <div style="background-color: #fff;width:100%;height:30px"></div>
 
-<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 430px">
-    <div style="margin-left: 12% ;margin-right: 12%; padding-top: 5px">
-        <p style="font-size: 80px; line-height: 120px; color: white; font-family: 方正粗圆_GBK; text-align: center">各类APP权限数量对比</br><span style="font-size: 80px">哪类APP拿走了我们最多的信息?</span>
+<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 320px">
+    <div style="margin-left: 23% ;margin-right: 23%; padding-top: 5px">
+        <p style="font-size: 50px; line-height: 100px; color: white; font-family: 方正粗圆_GBK; text-align: center">各类APP权限数量对比</br><span style="font-size: 50px">哪类APP拿走了我们最多的信息?</span>
         </p>
     </div>
 </div>
@@ -200,9 +202,9 @@
 
 <div style="background-color: #fff;width:100%;height:30px"></div>
 
-<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 380px">
-    <div style="margin-left: 10% ;margin-right: 10%; padding-top: 5px">
-        <p style="font-size: 80px; font-family: 方正粗圆_GBK; line-height: 120px; color: white; text-align: center">权限级别划分</br><span style="font-size: 80px">哪个APP拿走了我们最多的信息?</span>
+<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 320px">
+    <div style="margin-left: 25% ;margin-right: 25%; padding-top: 2px">
+        <p style="font-size: 50px; font-family: 方正粗圆_GBK; line-height: 100px; color: white; text-align: center">权限级别划分</br><span style="font-size: 50px">哪个APP拿走了我们最多的信息?</span>
         </p>
     </div>
 </div>
@@ -234,10 +236,10 @@
 
 <div style="background-color: #fff;width:100%;height:30px"></div>
 
-<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 380px">
+<div style="background-color: aqua;background-image:url(image/素材（3）ps.jpg);background-attachment: fixed;width:100%;height: 320px">
     <div style="margin-left: 20% ;margin-right: 20%; padding-top: 5px">
-                <p style="font-size: 80px ;text-align: center">
-            <span style="font-family: 方正粗圆_GBK; font-size: 80px;line-height: 120px; color: white">安全意识有所提升<br>信息保密仍需重视</span>
+                <p style="font-size: 60px ;text-align: center">
+            <span style="font-family: 方正粗圆_GBK; font-size: 50px;line-height: 100px; color: white">安全意识有所提升<br>信息保密仍需重视</span>
          </p>
        </div>
 </div>
@@ -296,10 +298,10 @@
 
 <div style="background-color: #fff;width:100%;height:20px"></div>
 
-<div style="width:100%;height:250px;background-color:#1dddf6">
+<div style="width:100%;height:420px;background-color:#1dddf6">
     <p style="font-size: 20px; font-family: 华文隶书; line-height: 40px; text-align: center">
         <strong>联系方式：</strong>yyscuter@163.com<br><strong>图片</strong>：来源于网络<br><strong>数据来源：</strong>
-        <br>中共中央网络安全和信息化委员会办公室<br>中华人名共和国工业和信息化部<br>《2020年中国手机APP隐私权限测评报告》
+        <br>中共中央网络安全和信息化委员会办公室<br>中华人名共和国工业和信息化部<br>《2020年中国手机APP隐私权限测评报告》<br><strong>参考文献：</strong><br>[1]方正梁. 紧绷用户隐私保护之“弦” 对违规行为“零容忍”.[R].人民邮电,2020:11-04.<br>[2]高理想.App申请和使用“可收集个人信息权限”案例分析.[J]保密科学技术,2019-10.<br>[3]毕舸. APP 成用户隐私惯犯处罚还要再“疼”一点.[C].1994-2020.China Academic Journal Electric Publishing House.
 
     </p>
 </div>
